<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@color/white">

    <!-- Botón hamburguesa -->
    <ImageView
        android:id="@+id/btnMenu"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:contentDescription="@string/app_name"
        android:padding="4dp"
        android:src="@drawable/ic_menu" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <!-- Barra de búsqueda -->
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/buscar_productos"
        android:padding="8dp"
        android:background="@drawable/bg_search" />

    <!-- Carrito -->
    <ImageView
        android:id="@+id/btnCart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_cart"
        android:contentDescription="@string/carrito" />
</LinearLayout>
