<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="170dp"
                android:layout_height="151dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/logo" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_bienvenido"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/text_bienvenido"
            android:textColor="@color/gray"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"

            android:background="@drawable/rounded_tv"
            android:hint="@string/nombres"
            android:inputType="textPersonName|textCapWords"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_tv"
            android:hint="@string/apellidos"
            android:inputType="textPersonName|textCapWords"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/gray" />


        <EditText
            android:id="@+id/correo_electronico"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_tv"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/gray" />



        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_tv"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


        </LinearLayout>

        <Button
            android:id="@+id/registrarse"
            android:layout_width="193dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tienes_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tienes_cuenta"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inicia_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/inicia_sesion"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>