<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="105dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/text_bienvenido"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:fontFamily="serif"
        android:text="@string/text_bienvenido"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="62dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/key"
        android:layout_width="62dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_tv"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/text_bienvenido" />


    <TextView
        android:id="@+id/olvidar_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidar_contrasena"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_tv"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/botoniniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/key"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.447" />

    <Button
        android:id="@+id/botoniniciarsesion"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/blue"
        android:text="@string/botoniniciarsesion"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ingresa_con_google"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/blue"
        android:text="@string/ingresa_con_google"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="15dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botoniniciarsesion"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/blue"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/no_tienes_cuenta"
        android:layout_width="152dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonregistrate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresa_con_google"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/botonregistrate"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/white"
        android:text="@string/botonregistrate"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresa_con_google"
        app:layout_constraintVertical_bias="0.485" />

</androidx.constraintlayout.widget.ConstraintLayout>